--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^6.8.3",
-		"morgan": "^1.10.0"
+		"morgan": "^1.10.0",
+		"stripe": "^11.9.1"
 	},
 	"name": "ticketscout-v2",
 	"version": "1.0.0",
 	"main": "index.js",
 	"type": "module",
-	"devDependencies": {},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "nodemon index.js"
