--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"express-validator": "^6.14.3",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^6.8.3",
 		"morgan": "^1.10.0",
-		"stripe": "^11.9.1"
+		"stripe": "^11.9.1",
+		"validator": "^13.9.0"
 	},
 	"name": "ticketscout-v2",
 	"version": "1.0.0",
