--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@sentry/node": "^7.36.0",
 		"bcrypt": "^5.1.0",
 		"body-parser": "^1.20.1",
 		"cors": "^2.8.5",
@@ -15,11 +16,11 @@
 	},
 	"name": "ticketscout-v2",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "app.js",
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon index.js"
+		"start": "nodemon app.js"
 	},
 	"keywords": [],
 	"author": "",
