--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^6.8.3",
 		"morgan": "^1.10.0",
+		"nodemailer": "^6.9.1",
 		"stripe": "^11.9.1",
+		"uuid": "^9.0.0",
 		"validator": "^13.9.0"
 	},
 	"name": "ticketscout-v2",
