--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
 		"mongoose": "^6.8.3",
+		"mongoose-sequence": "^5.3.1",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.1",
 		"stripe": "^11.9.1",
