--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"express-validator": "^6.14.3",
 		"helmet": "^6.0.1",
 		"jsonwebtoken": "^9.0.0",
+		"moment": "^2.29.4",
 		"mongoose": "^6.8.3",
 		"mongoose-sequence": "^5.3.1",
 		"morgan": "^1.10.0",
