--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"mongoose-sequence": "^5.3.1",
 		"morgan": "^1.10.0",
 		"nodemailer": "^6.9.1",
+		"socket.io": "^4.6.1",
 		"stripe": "^11.9.1",
 		"uuid": "^9.0.0",
 		"validator": "^13.9.0"
