--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"express": "^4.18.2",
 		"express-validator": "^6.14.3",
 		"helmet": "^6.0.1",
+		"http": "^0.0.1-security",
 		"jsonwebtoken": "^9.0.0",
 		"moment": "^2.29.4",
 		"mongoose": "^6.8.3",
