--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 	"type": "module",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "nodemon app.js"
+		"start": "nodemon app.js",
+		"prod-start": "node app.js"
 	},
 	"keywords": [],
 	"author": "",
